2006-03-28  Dalibor Topic  <robilad@kaffe.org>

	* external/gcc/fastjar/jartool.c: Cast filenames to char*
	before calling canonical_filename to fix compiler warnings.

2005-03-28  Antoine Reilles  <tonio@kaffe.org>,
	    Joerg Sonnenberger  <joerg@britannica.bec.de>

	* external/gcc/fastjar/jartool.c: Fix security problem for 
	fastjar reported at : http://secunia.com/advisories/14902
	Confirmed by Dalibor.

	Use a canonical_filename function as proposed by joerg, 
	since the problem can't be fixed by realpath, see
	http://mail-index.netbsd.org/tech-pkg/2006/03/07/0002.html

2006-03-27  Dalibor Topic  <robilad@kaffe.org>

	* ChangeLog.18, ChangeLog: Moved old change logs to 
	ChangeLog.18.

	* Makefile.am (EXTRA_DIST): Added ChangeLog.18.

	* developers/autogen.sh: Don't try to apply patch for 
	config.sub if it has already been applied.

2006-03-27  Kurt Miller <kurt@intricatesoftware.com>

        * config/powerpc//threads.h: (THREADSTACKSIZE) Increased
        stack size.

2006-03-27  Dalibor Topic  <robilad@kaffe.org>

        * ChangeLog: Updated Kurt Miller's e-mail address.

2006-03-27  Dalibor Topic  <robilad@kaffe.org>

        * configure.ac, README: Bumped version number up to 1.1.8-pre.

See ChangeLog.17 for earlier messages.
